--- a/src/component/SerchResult/SerchResult.css
+++ b/src/component/SerchResult/SerchResult.css
@@ -1,4 +1,8 @@
 .search-results {
+  background-color: black;
+  height: 100vh;
+  width: 100vw;
+ overflow-y: scroll;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     gap: 20px;
